--- a/ASPNETKata/Views/Product/Index.cshtml
+++ b/ASPNETKata/Views/Product/Index.cshtml
@@ -12,6 +12,9 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.ProductId)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th></th>
@@ -19,6 +22,9 @@
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.ProductId)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
         </td>
